v2.0.0/_sources/plc_lfe_vac_plc_lfe_vac_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.88.138.1.1
      -
    * - Target IP address
      - 172.21.88.138
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _plc_lfe_vac_pragmas:

Pragmas
-------

Total pragmas found: 180
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, 2.6.0
        LCLS Vacuum, SLAC - LCLS, Unset, 2.3.0
        PMPS, SLAC - LCLS, Unset, 3.0.0
        SysDir, System, , 3.5.8.0
        SysFile, System, , 3.5.9.0
        Tc2_EtherCAT, Beckhoff Automation GmbH, , 3.3.13.0
        Tc2_IoFunctions, Beckhoff Automation GmbH, , 3.3.11.0
        Tc2_Math, Beckhoff Automation GmbH, , 3.3.1.0
        Tc2_MC2, Beckhoff Automation GmbH, , 3.3.42.0
        Tc2_ModbusSrv, Beckhoff Automation GmbH, , 3.3.2.0
        Tc2_SerialCom, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 3.3.2.0
        Tc2_System, Beckhoff Automation GmbH, Unset, 3.4.22.0
        Tc2_TcpIp, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Utilities, Beckhoff Automation GmbH, , 3.3.35.0
        Tc3_EventLogger, Beckhoff Automation GmbH, , 3.1.22.0
        Tc3_JsonXml, Beckhoff Automation GmbH, , 3.3.6.0
        Tc3_Module, Beckhoff Automation GmbH, Unset, 3.3.21.0
        TcUnit, www.tcunit.org, , 1.0.0.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4387104 (32)


Constants
^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 656068536 (8)
        Constants.bLittleEndian, BOOL, 656068520 (8)
        Constants.bSimulationMode, BOOL, 656068528 (8)
        Constants.CompilerVersion, VERSION, 656069568 (64)
        Constants.CompilerVersionNumeric, DWORD, 656069696 (32)
        Constants.gc_GaugeValidState, INT, 638758240 (16)
        Constants.gc_iSizeOfGGOArray, INT, 630381392 (16)
        Constants.nPackMode, UINT, 656069648 (16)
        Constants.nRegisterSize, WORD, 656069632 (16)
        Constants.RuntimeVersion, VERSION, 656069504 (64)
        Constants.RuntimeVersionNumeric, DWORD, 656069664 (32)

.. raw:: html

   </details>
   <br />


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


DIAGNOSTICS
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DIAGNOSTICS.aEcSlaveInfo, ST_EcDevice, 645379952 (507904)
        DIAGNOSTICS.aiSlaveStates, BYTE, 645377896 (2048)
        DIAGNOSTICS.bAllSlaveStateGood, BOOL, 638763984 (8)
        DIAGNOSTICS.bMasterStateGood, BOOL, 638763992 (8)
        DIAGNOSTICS.fbEcatDiag, FB_EcatDiag, 644690304 (686944)
        DIAGNOSTICS.fbEcatDiag.I_AMSNetId, AMSNETID, 644690336 (48)
        DIAGNOSTICS.i_sAMSNetID, AMSNETID, 644688936 (48)
        DIAGNOSTICS.iMasterState, WORD, 644603360 (16)
        DIAGNOSTICS.nSlaveNumber, UINT, 644603376 (16)
        DIAGNOSTICS.sAMSNetID, STRING(80), 644688984 (648)
        DIAGNOSTICS.sLibVersion_LCLS_General, STRING(80), 644689632 (648)
        DIAGNOSTICS.sMasterState, STRING(80), 645377248 (648)
        DIAGNOSTICS.sPLCName, STRING(80), 644688288 (648)

.. raw:: html

   </details>
   <br />


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4389024 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4389152 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4387152 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4389184 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>372 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4180544 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4180448 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4180480 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4180320 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4180416 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4180256 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4180512 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4180288 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4180352 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4180384 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4180128 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4179904 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4180032 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4180096 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4180000 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4180160 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4180192 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4179968 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4179936 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4180064 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4179840 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4180224 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4179808 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4179872 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4180576 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4180608 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4181664 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4181600 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4181696 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4181728 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4181760 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4181792 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4181632 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4179696 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4179632 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4179760 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4179472 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4179744 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4179504 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4179456 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4179584 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4179776 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4179600 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4179616 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4179712 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4179488 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4179680 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4179536 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4179568 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4179648 (16)
        Global_Variables.ADSSTATE_START, UINT, 4179520 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4179552 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4179728 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4179664 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4247456 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4247488 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4247520 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4179168 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097168 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4179392 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4179408 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4179280 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4179200 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4179264 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4179296 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4179216 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4179232 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4179248 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4179312 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4179328 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4179344 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4179360 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4179376 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4179184 (16)
        Global_Variables.AMSPORT_R3_MODBUSSERV, UINT, 4383984 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4179440 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4179424 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4387136 (16)
        Global_Variables.bEcFoeOpenFileNameWithFileExt, BOOL, 638763976 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4181824 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4179800 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097160 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4179792 (8)
        Global_Variables.bSeqReadDrvAttrAndValue, BOOL, 638763968 (8)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4388128 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4255136 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4260448 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4266720 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4266688 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4266656 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4266752 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4182496 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 638757888 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4246200 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4184224 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4382992 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4383000 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 638757824 (64)
        Global_Variables.EC_ADS_IGRP_CANOPEN_SDO, UDINT, 638762080 (32)
        Global_Variables.EC_ADS_IGRP_CANOPEN_SDO_LASTERROR, UDINT, 638762112 (32)
        Global_Variables.EC_ADS_IGRP_ECAT_SOE, UDINT, 638761728 (32)
        Global_Variables.EC_ADS_IGRP_ECAT_SOE_LASTERROR, UDINT, 638761760 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FCLOSE, UDINT, 638761920 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FOPENREAD, UDINT, 638761856 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FOPENWRITE, UDINT, 638761888 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FREAD, UDINT, 638761952 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FWRITE, UDINT, 638761984 (32)
        Global_Variables.EC_ADS_IGRP_FOE_LASTERROR, UDINT, 638762048 (32)
        Global_Variables.EC_ADS_IGRP_FOE_PROGRESSINFO, UDINT, 638762016 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_COUNT_FRAME, UDINT, 638761696 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_COUNT_SLAVE, UDINT, 638761312 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_DEVICESTATE, UDINT, 638761664 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SENDCMD, UDINT, 638761472 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_ABNORMAL_STATE_CHANGES, UDINT, 638761600 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_ADDRESSES, UDINT, 638761440 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_CRC, UDINT, 638761568 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_IDENTITY, UDINT, 638761536 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_SETPRESENT_CHANGES, UDINT, 638761632 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_STATEMACHINE, UDINT, 638761184 (32)
        Global_Variables.EC_ADS_IGRP_SLAVE_STATEMACHINE, UDINT, 638761504 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_PORT, UDINT, 638761376 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_ROUTER, UDINT, 638761408 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_SLAVE, UDINT, 638761344 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_CURSTATE, UDINT, 638761216 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_INTERNALSTATE, UDINT, 638761280 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_REQSTATE, UDINT, 638761248 (32)
        Global_Variables.EC_AMSPORT_MASTER, UINT, 638760592 (16)
        Global_Variables.EC_CMD_TYPE_APRD, BYTE, 638758360 (8)
        Global_Variables.EC_CMD_TYPE_APRW, BYTE, 638760952 (8)
        Global_Variables.EC_CMD_TYPE_APWR, BYTE, 638760944 (8)
        Global_Variables.EC_CMD_TYPE_BRD, BYTE, 638760984 (8)
        Global_Variables.EC_CMD_TYPE_BRW, BYTE, 638761000 (8)
        Global_Variables.EC_CMD_TYPE_BWR, BYTE, 638760992 (8)
        Global_Variables.EC_CMD_TYPE_FPRD, BYTE, 638760960 (8)
        Global_Variables.EC_CMD_TYPE_FPRW, BYTE, 638760976 (8)
        Global_Variables.EC_CMD_TYPE_FPWR, BYTE, 638760968 (8)
        Global_Variables.EC_CMD_TYPE_LRD, BYTE, 638761008 (8)
        Global_Variables.EC_CMD_TYPE_LRW, BYTE, 638761024 (8)
        Global_Variables.EC_CMD_TYPE_LWR, BYTE, 638761016 (8)
        Global_Variables.EC_COE_PROTERR_ACCESS, UDINT, 638762720 (32)
        Global_Variables.EC_COE_PROTERR_BLK_SIZE, UDINT, 638762592 (32)
        Global_Variables.EC_COE_PROTERR_CCS_SCS, UDINT, 638762560 (32)
        Global_Variables.EC_COE_PROTERR_CRC, UDINT, 638762656 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE, UDINT, 638763136 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE1, UDINT, 638763168 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE2, UDINT, 638763200 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE, UDINT, 638763008 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE1, UDINT, 638763040 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE2, UDINT, 638763072 (32)
        Global_Variables.EC_COE_PROTERR_DICTIONARY, UDINT, 638763392 (32)
        Global_Variables.EC_COE_PROTERR_GENERAL, UDINT, 638763264 (32)
        Global_Variables.EC_COE_PROTERR_HARDWARE, UDINT, 638762976 (32)
        Global_Variables.EC_COE_PROTERR_I_INCOMP, UDINT, 638762944 (32)
        Global_Variables.EC_COE_PROTERR_INDEX, UDINT, 638762816 (32)
        Global_Variables.EC_COE_PROTERR_MEMORY, UDINT, 638762688 (32)
        Global_Variables.EC_COE_PROTERR_MINMAX, UDINT, 638763232 (32)
        Global_Variables.EC_COE_PROTERR_OFFSET, UDINT, 638763104 (32)
        Global_Variables.EC_COE_PROTERR_P_INCOMP, UDINT, 638762912 (32)
        Global_Variables.EC_COE_PROTERR_PDO_LEN, UDINT, 638762880 (32)
        Global_Variables.EC_COE_PROTERR_PDO_MAP, UDINT, 638762848 (32)
        Global_Variables.EC_COE_PROTERR_READONLY, UDINT, 638762784 (32)
        Global_Variables.EC_COE_PROTERR_SEQNO, UDINT, 638762624 (32)
        Global_Variables.EC_COE_PROTERR_TIMEOUT, UDINT, 638762528 (32)
        Global_Variables.EC_COE_PROTERR_TOGGLE, UDINT, 638762496 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER, UDINT, 638763296 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER1, UDINT, 638763328 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER2, UDINT, 638763360 (32)
        Global_Variables.EC_COE_PROTERR_WRITEONLY, UDINT, 638762752 (32)
        Global_Variables.EC_DCTIME_DATEDELTA_OFFSET, DWORD, 638763424 (32)
        Global_Variables.EC_DCTIME_DELTA_OFFSET, T_ULARGE_INTEGER, 638763456 (64)
        Global_Variables.EC_DCTIME_DELTA_OFFSET64, ULINT, 638763712 (64)
        Global_Variables.EC_DCTIME_TICKSPERDAY, T_ULARGE_INTEGER, 638763648 (64)
        Global_Variables.EC_DCTIME_TICKSPERDAY64, ULINT, 638763904 (64)
        Global_Variables.EC_DCTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 638763520 (64)
        Global_Variables.EC_DCTIME_TICKSPERMSEC64, ULINT, 638763776 (64)
        Global_Variables.EC_DCTIME_TICKSPERSEC, T_ULARGE_INTEGER, 638763584 (64)
        Global_Variables.EC_DCTIME_TICKSPERSEC64, ULINT, 638763840 (64)
        Global_Variables.EC_DEVICE_STATE_BOOTSTRAP, BYTE, 638761056 (8)
        Global_Variables.EC_DEVICE_STATE_DISABLED, BYTE, 638761104 (8)
        Global_Variables.EC_DEVICE_STATE_ERROR, BYTE, 638761080 (8)
        Global_Variables.EC_DEVICE_STATE_INIT, BYTE, 638761040 (8)
        Global_Variables.EC_DEVICE_STATE_INITCMD_ERROR, BYTE, 638761096 (8)
        Global_Variables.EC_DEVICE_STATE_INVALID_VPRS, BYTE, 638761088 (8)
        Global_Variables.EC_DEVICE_STATE_MASK, BYTE, 638761032 (8)
        Global_Variables.EC_DEVICE_STATE_OP, BYTE, 638761072 (8)
        Global_Variables.EC_DEVICE_STATE_PREOP, BYTE, 638761048 (8)
        Global_Variables.EC_DEVICE_STATE_SAFEOP, BYTE, 638761064 (8)
        Global_Variables.EC_FOE_PROTERR_ACCESS, UDINT, 638762208 (32)
        Global_Variables.EC_FOE_PROTERR_BOOTSTRAPONLY, UDINT, 638762400 (32)
        Global_Variables.EC_FOE_PROTERR_DISKFULL, UDINT, 638762240 (32)
        Global_Variables.EC_FOE_PROTERR_EXISTS, UDINT, 638762336 (32)
        Global_Variables.EC_FOE_PROTERR_ILLEAGAL, UDINT, 638762272 (32)
        Global_Variables.EC_FOE_PROTERR_INVALIDPASSWORD, UDINT, 638762464 (32)
        Global_Variables.EC_FOE_PROTERR_NOTDEFINED, UDINT, 638762144 (32)
        Global_Variables.EC_FOE_PROTERR_NOTFOUND, UDINT, 638762176 (32)
        Global_Variables.EC_FOE_PROTERR_NOTINBOOTSTRAP, UDINT, 638762432 (32)
        Global_Variables.EC_FOE_PROTERR_NOUSER, UDINT, 638762368 (32)
        Global_Variables.EC_FOE_PROTERR_PACKENO, UDINT, 638762304 (32)
        Global_Variables.EC_LINK_STATE_ADDITIONAL_LINK, BYTE, 638761144 (8)
        Global_Variables.EC_LINK_STATE_LINK_WITHOUT_COMM, BYTE, 638761128 (8)
        Global_Variables.EC_LINK_STATE_MISSING_LINK, BYTE, 638761136 (8)
        Global_Variables.EC_LINK_STATE_NOT_PRESENT, BYTE, 638761120 (8)
        Global_Variables.EC_LINK_STATE_OK, BYTE, 638761112 (8)
        Global_Variables.EC_LINK_STATE_PORT_A, BYTE, 638761152 (8)
        Global_Variables.EC_LINK_STATE_PORT_B, BYTE, 638761160 (8)
        Global_Variables.EC_LINK_STATE_PORT_C, BYTE, 638761168 (8)
        Global_Variables.EC_LINK_STATE_PORT_D, BYTE, 638761176 (8)
        Global_Variables.EC_MAX_SLAVES, UINT, 638760928 (16)
        Global_Variables.EC_SOE_ELEMENT_ATTRIBUTE, BYTE, 638761808 (8)
        Global_Variables.EC_SOE_ELEMENT_DATASTATE, BYTE, 638761792 (8)
        Global_Variables.EC_SOE_ELEMENT_DEFAULT, BYTE, 638761848 (8)
        Global_Variables.EC_SOE_ELEMENT_MAX, BYTE, 638761832 (8)
        Global_Variables.EC_SOE_ELEMENT_MIN, BYTE, 638761824 (8)
        Global_Variables.EC_SOE_ELEMENT_NAME, BYTE, 638761800 (8)
        Global_Variables.EC_SOE_ELEMENT_UNIT, BYTE, 638761816 (8)
        Global_Variables.EC_SOE_ELEMENT_VALUE, BYTE, 638761840 (8)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4248096 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4386120 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4385824 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4385696 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4246208 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4182480 (16)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 638759424 (128)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4247568 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4247552 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4247584 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4247600 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4247616 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4247936 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4247712 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4248032 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4247808 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4248000 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4248064 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4247648 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4247680 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4247872 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4247776 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4247904 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4247968 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4247840 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4247744 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4181920 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4181984 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4181952 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4181856 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4182016 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4181888 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4248448 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4248192 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4247536 (16)
        Global_Variables.g_DummyVG, ST_VG, 638758368 (1056)
        Global_Variables.g_iSizeOfGGOArray, INT, 638758256 (16)
        Global_Variables.g_stSystem, ST_System, 638758272 (88)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4184192 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4184072 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4184160 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4184176 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4247424 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4245888 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4245920 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4388064 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4388096 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4245792 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4245760 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4245728 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4184080 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4245952 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4184240 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4246176 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4184232 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4246192 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4182592 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4388160 (32)
        Global_Variables.MB_MAXSIZE, UDINT, 4387008 (32)
        Global_Variables.MBADS_IGR_CLOSEALL, UDINT, 4387040 (32)
        Global_Variables.MBADS_IGR_UDP_FLAG, DWORD, 4387072 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4246184 (8)
        Global_Variables.MODBUS_TCP_PORT, UINT, 4385680 (16)
        Global_Variables.nWatchdogTime, BYTE, 4181848 (8)
        Global_Variables.PI, LREAL, 4182528 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4246112 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4246144 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4246080 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4245984 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4181408 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4180768 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4180736 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4246016 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4246048 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4180832 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4181152 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4181120 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4247392 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4180992 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4180800 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4181088 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4181024 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4180864 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4181184 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4181056 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4180928 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4180960 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4180896 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4245824 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4245856 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4181216 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4180640 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4180672 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4180704 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4181280 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4181248 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4181312 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4181376 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4181344 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4181832 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4181840 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4255072 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4255424 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4255008 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4255360 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4254784 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4253936 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4254320 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4254944 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4255296 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4254816 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4255168 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4254880 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4255232 (64)
        Global_Variables.TaskInfo, PlcTaskSystemInfo, 638759552 (1024)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4182464 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4182448 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4182352 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4182288 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4182304 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4182320 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4182272 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4182336 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4182416 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4182368 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4182400 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4182432 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4182384 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 638750848 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4387456 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4387200 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4387168 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4387392 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4387424 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4387264 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4387296 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4387328 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4387232 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4387360 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 4387712 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4387584 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4387552 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4387488 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4387648 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4387680 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4387520 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4387616 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 4388608 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 4388192 (416)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4181536 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4181440 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4181504 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4181472 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4181568 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4255488 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>12 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_DataExchange, ST_LibVersion, 638760608 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4386432 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 638757952 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 638750560 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4386720 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4178880 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4183744 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4389440 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4389856 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4183136 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 8537696 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 638750272 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4389376 (32)


GVL_Devices
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>279 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Devices.AT2L0_SOLID_GCC_01, FB_MKS422, 648368896 (87680)
        GVL_Devices.AT2L0_SOLID_GCC_01.i_iPRESS_R, INT, 648456256 (16)
        GVL_Devices.AT2L0_SOLID_GCC_01.q_xHV_DIS, BOOL, 648456272 (8)
        GVL_Devices.AT2L0_SOLID_GPI_01, FB_MKS317, 648282560 (86336)
        GVL_Devices.AT2L0_SOLID_GPI_01.i_iPRESS_R, INT, 648368608 (16)
        GVL_Devices.AT2L0_SOLID_PIN_01, FB_PIP_Gamma, 648456576 (90240)
        GVL_Devices.AT2L0_SOLID_PIN_01.i_iPRESS, INT, 648542896 (16)
        GVL_Devices.AT2L0_SOLID_PIN_01.i_xSP_DI, BOOL, 648542912 (8)
        GVL_Devices.AT2L0_SOLID_PIN_01.q_xHVEna_DO, BOOL, 648542880 (8)
        GVL_Devices.BT2L0_PLEG_GCC_01, FB_MKS500, 650221376 (88000)
        GVL_Devices.BT2L0_PLEG_GCC_01.i_iPRESS_R, INT, 650308976 (16)
        GVL_Devices.BT2L0_PLEG_GCC_01.i_xDisc_Active, BOOL, 650309008 (8)
        GVL_Devices.BT2L0_PLEG_GCC_01.i_xHV_ON, BOOL, 650309000 (8)
        GVL_Devices.BT2L0_PLEG_GCC_01.q_xHV_DIS, BOOL, 650308992 (8)
        GVL_Devices.BT2L0_PLEG_GPI_01, FB_MKS275, 650135040 (86336)
        GVL_Devices.BT2L0_PLEG_GPI_01.i_iPRESS_R, INT, 650221120 (16)
        GVL_Devices.BT2L0_PLEG_PIP_01, FB_PIP_Gamma, 650309376 (90240)
        GVL_Devices.BT2L0_PLEG_PIP_01.i_iPRESS, INT, 650395696 (16)
        GVL_Devices.BT2L0_PLEG_PIP_01.i_xSP_DI, BOOL, 650395712 (8)
        GVL_Devices.BT2L0_PLEG_PIP_01.q_xHVEna_DO, BOOL, 650395680 (8)
        GVL_Devices.BT2L0_PLEG_VGC_01, FB_VGC, 649958080 (176960)
        GVL_Devices.BT2L0_PLEG_VGC_01.i_xClsLS, BOOL, 650134920 (8)
        GVL_Devices.BT2L0_PLEG_VGC_01.i_xOpnLS, BOOL, 650134912 (8)
        GVL_Devices.BT2L0_PLEG_VGC_01.q_xOPN_DO, BOOL, 650134928 (8)
        GVL_Devices.IM1L0_XTES_PIP_01, FB_PIP_Gamma, 646867712 (90240)
        GVL_Devices.IM1L0_XTES_PIP_01.i_iPRESS, INT, 646954032 (16)
        GVL_Devices.IM1L0_XTES_PIP_01.i_xSP_DI, BOOL, 646954048 (8)
        GVL_Devices.IM1L0_XTES_PIP_01.q_xHVEna_DO, BOOL, 646954016 (8)
        GVL_Devices.IM1L0_XTES_VGC_01, FB_VGC, 646690752 (176960)
        GVL_Devices.IM1L0_XTES_VGC_01.i_xClsLS, BOOL, 646867592 (8)
        GVL_Devices.IM1L0_XTES_VGC_01.i_xOpnLS, BOOL, 646867584 (8)
        GVL_Devices.IM1L0_XTES_VGC_01.q_xOPN_DO, BOOL, 646867600 (8)
        GVL_Devices.MR1L0_HOMS_GCC_01, FB_MKS422, 649515584 (87680)
        GVL_Devices.MR1L0_HOMS_GCC_01.i_iPRESS_R, INT, 649602944 (16)
        GVL_Devices.MR1L0_HOMS_GCC_01.q_xHV_DIS, BOOL, 649602960 (8)
        GVL_Devices.MR1L0_HOMS_GPI_01, FB_MKS317, 649429248 (86336)
        GVL_Devices.MR1L0_HOMS_GPI_01.i_iPRESS_R, INT, 649515296 (16)
        GVL_Devices.MR1L0_HOMS_PIP_01, FB_PIP_Gamma, 649603264 (90240)
        GVL_Devices.MR1L0_HOMS_PIP_01.i_iPRESS, INT, 649689584 (16)
        GVL_Devices.MR1L0_HOMS_PIP_01.i_xSP_DI, BOOL, 649689600 (8)
        GVL_Devices.MR1L0_HOMS_PIP_01.q_xHVEna_DO, BOOL, 649689568 (8)
        GVL_Devices.MR1L0_HOMS_VGC_01, FB_VGC, 649252288 (176960)
        GVL_Devices.MR1L0_HOMS_VGC_01.i_xClsLS, BOOL, 649429128 (8)
        GVL_Devices.MR1L0_HOMS_VGC_01.i_xOpnLS, BOOL, 649429120 (8)
        GVL_Devices.MR1L0_HOMS_VGC_01.q_xOPN_DO, BOOL, 649429136 (8)
        GVL_Devices.MR1L1_TXI_GCC_01, FB_MKS500, 649779840 (88000)
        GVL_Devices.MR1L1_TXI_GCC_01.i_iPRESS_R, INT, 649867440 (16)
        GVL_Devices.MR1L1_TXI_GCC_01.i_xDisc_Active, BOOL, 649867472 (8)
        GVL_Devices.MR1L1_TXI_GCC_01.i_xHV_ON, BOOL, 649867464 (8)
        GVL_Devices.MR1L1_TXI_GCC_01.q_xHV_DIS, BOOL, 649867456 (8)
        GVL_Devices.MR1L1_TXI_GPI_01, FB_MKS275, 649693504 (86336)
        GVL_Devices.MR1L1_TXI_GPI_01.i_iPRESS_R, INT, 649779584 (16)
        GVL_Devices.MR1L1_TXI_PIP_01, FB_PIP_Gamma, 649867840 (90240)
        GVL_Devices.MR1L1_TXI_PIP_01.i_iPRESS, INT, 649954160 (16)
        GVL_Devices.MR1L1_TXI_PIP_01.i_xSP_DI, BOOL, 649954176 (8)
        GVL_Devices.MR1L1_TXI_PIP_01.q_xHVEna_DO, BOOL, 649954144 (8)
        GVL_Devices.MR2L0_HOMS_GCC_01, FB_MKS500, 650662912 (88000)
        GVL_Devices.MR2L0_HOMS_GCC_01.i_iPRESS_R, INT, 650750512 (16)
        GVL_Devices.MR2L0_HOMS_GCC_01.i_xDisc_Active, BOOL, 650750544 (8)
        GVL_Devices.MR2L0_HOMS_GCC_01.i_xHV_ON, BOOL, 650750536 (8)
        GVL_Devices.MR2L0_HOMS_GCC_01.q_xHV_DIS, BOOL, 650750528 (8)
        GVL_Devices.MR2L0_HOMS_GPI_01, FB_MKS275, 650576576 (86336)
        GVL_Devices.MR2L0_HOMS_GPI_01.i_iPRESS_R, INT, 650662656 (16)
        GVL_Devices.MR2L0_HOMS_PIP_01, FB_PIP_Gamma, 650750912 (90240)
        GVL_Devices.MR2L0_HOMS_PIP_01.i_iPRESS, INT, 650837232 (16)
        GVL_Devices.MR2L0_HOMS_PIP_01.i_xSP_DI, BOOL, 650837248 (8)
        GVL_Devices.MR2L0_HOMS_PIP_01.q_xHVEna_DO, BOOL, 650837216 (8)
        GVL_Devices.MR2L0_HOMS_VGC_01, FB_VGC, 650399616 (176960)
        GVL_Devices.MR2L0_HOMS_VGC_01.i_xClsLS, BOOL, 650576456 (8)
        GVL_Devices.MR2L0_HOMS_VGC_01.i_xOpnLS, BOOL, 650576448 (8)
        GVL_Devices.MR2L0_HOMS_VGC_01.q_xOPN_DO, BOOL, 650576464 (8)
        GVL_Devices.MR2L0_HOMS_VGC_02, FB_VGC, 650841152 (176960)
        GVL_Devices.MR2L0_HOMS_VGC_02.i_xClsLS, BOOL, 651017992 (8)
        GVL_Devices.MR2L0_HOMS_VGC_02.i_xOpnLS, BOOL, 651017984 (8)
        GVL_Devices.MR2L0_HOMS_VGC_02.q_xOPN_DO, BOOL, 651018000 (8)
        GVL_Devices.PA1L0_GCC_01, FB_MKS422, 649164608 (87680)
        GVL_Devices.PA1L0_GCC_01.i_iPRESS_R, INT, 649251968 (16)
        GVL_Devices.PA1L0_GCC_01.q_xHV_DIS, BOOL, 649251984 (8)
        GVL_Devices.PA1L0_GPI_01, FB_MKS317, 649078272 (86336)
        GVL_Devices.PA1L0_GPI_01.i_iPRESS_R, INT, 649164320 (16)
        GVL_Devices.PA1L0_PIN_01, FB_PIP_Gamma, 648988032 (90240)
        GVL_Devices.PA1L0_PIN_01.i_iPRESS, INT, 649074352 (16)
        GVL_Devices.PA1L0_PIN_01.i_xSP_DI, BOOL, 649074368 (8)
        GVL_Devices.PA1L0_PIN_01.q_xHVEna_DO, BOOL, 649074336 (8)
        GVL_Devices.PA2L0_PIN_01, FB_PIP_Gamma, 652521920 (90240)
        GVL_Devices.PA2L0_PIN_01.i_iPRESS, INT, 652608240 (16)
        GVL_Devices.PA2L0_PIN_01.i_xSP_DI, BOOL, 652608256 (8)
        GVL_Devices.PA2L0_PIN_01.q_xHVEna_DO, BOOL, 652608224 (8)
        GVL_Devices.PC1L0_XTES_VGC_01, FB_VGC, 648546816 (176960)
        GVL_Devices.PC1L0_XTES_VGC_01.i_xClsLS, BOOL, 648723656 (8)
        GVL_Devices.PC1L0_XTES_VGC_01.i_xOpnLS, BOOL, 648723648 (8)
        GVL_Devices.PC1L0_XTES_VGC_01.q_xOPN_DO, BOOL, 648723664 (8)
        GVL_Devices.PC2L1_L2SI_VGC_01, FB_VGC, 651638848 (176960)
        GVL_Devices.PC2L1_L2SI_VGC_01.i_xClsLS, BOOL, 651815688 (8)
        GVL_Devices.PC2L1_L2SI_VGC_01.i_xOpnLS, BOOL, 651815680 (8)
        GVL_Devices.PC2L1_L2SI_VGC_01.q_xOPN_DO, BOOL, 651815696 (8)
        GVL_Devices.RTDSL0_PIP_01, FB_PIP_Gamma, 646239552 (90240)
        GVL_Devices.RTDSL0_PIP_01.i_iPRESS, INT, 646325872 (16)
        GVL_Devices.RTDSL0_PIP_01.i_xSP_DI, BOOL, 646325888 (8)
        GVL_Devices.RTDSL0_PIP_01.q_xHVEna_DO, BOOL, 646325856 (8)
        GVL_Devices.RTDSL0_PIP_02, FB_PIP_Gamma, 646329792 (90240)
        GVL_Devices.RTDSL0_PIP_02.i_iPRESS, INT, 646416112 (16)
        GVL_Devices.RTDSL0_PIP_02.i_xSP_DI, BOOL, 646416128 (8)
        GVL_Devices.RTDSL0_PIP_02.q_xHVEna_DO, BOOL, 646416096 (8)
        GVL_Devices.RTDSL0_PIP_03, FB_PIP_Gamma, 646420032 (90240)
        GVL_Devices.RTDSL0_PIP_03.i_iPRESS, INT, 646506352 (16)
        GVL_Devices.RTDSL0_PIP_03.i_xSP_DI, BOOL, 646506368 (8)
        GVL_Devices.RTDSL0_PIP_03.q_xHVEna_DO, BOOL, 646506336 (8)
        GVL_Devices.RTDSL0_PIP_04, FB_PIP_Gamma, 646510272 (90240)
        GVL_Devices.RTDSL0_PIP_04.i_iPRESS, INT, 646596592 (16)
        GVL_Devices.RTDSL0_PIP_04.i_xSP_DI, BOOL, 646596608 (8)
        GVL_Devices.RTDSL0_PIP_04.q_xHVEna_DO, BOOL, 646596576 (8)
        GVL_Devices.RTDSL0_PIP_05, FB_PIP_Gamma, 646600512 (90240)
        GVL_Devices.RTDSL0_PIP_05.i_iPRESS, INT, 646686832 (16)
        GVL_Devices.RTDSL0_PIP_05.i_xSP_DI, BOOL, 646686848 (8)
        GVL_Devices.RTDSL0_PIP_05.q_xHVEna_DO, BOOL, 646686816 (8)
        GVL_Devices.SL1L0_POWER_GCC_01, FB_MKS422, 648104640 (87680)
        GVL_Devices.SL1L0_POWER_GCC_01.i_iPRESS_R, INT, 648192000 (16)
        GVL_Devices.SL1L0_POWER_GCC_01.q_xHV_DIS, BOOL, 648192016 (8)
        GVL_Devices.SL1L0_POWER_GPI_01, FB_MKS317, 648018304 (86336)
        GVL_Devices.SL1L0_POWER_GPI_01.i_iPRESS_R, INT, 648104352 (16)
        GVL_Devices.SL1L0_POWER_PIN_01, FB_PIP_Gamma, 648192320 (90240)
        GVL_Devices.SL1L0_POWER_PIN_01.i_iPRESS, INT, 648278640 (16)
        GVL_Devices.SL1L0_POWER_PIN_01.i_xSP_DI, BOOL, 648278656 (8)
        GVL_Devices.SL1L0_POWER_PIN_01.q_xHVEna_DO, BOOL, 648278624 (8)
        GVL_Devices.SP1L0_KMONO_GCC_01, FB_MKS422, 648810112 (87680)
        GVL_Devices.SP1L0_KMONO_GCC_01.i_iPRESS_R, INT, 648897472 (16)
        GVL_Devices.SP1L0_KMONO_GCC_01.q_xHV_DIS, BOOL, 648897488 (8)
        GVL_Devices.SP1L0_KMONO_GPI_01, FB_MKS317, 648723776 (86336)
        GVL_Devices.SP1L0_KMONO_GPI_01.i_iPRESS_R, INT, 648809824 (16)
        GVL_Devices.SP1L0_KMONO_PIP_01, FB_PIP_Gamma, 648897792 (90240)
        GVL_Devices.SP1L0_KMONO_PIP_01.i_iPRESS, INT, 648984112 (16)
        GVL_Devices.SP1L0_KMONO_PIP_01.i_xSP_DI, BOOL, 648984128 (8)
        GVL_Devices.SP1L0_KMONO_PIP_01.q_xHVEna_DO, BOOL, 648984096 (8)
        GVL_Devices.ST1L0_XTES_GCC_01, FB_MKS500, 651460608 (88000)
        GVL_Devices.ST1L0_XTES_GCC_01.i_iPRESS_R, INT, 651548208 (16)
        GVL_Devices.ST1L0_XTES_GCC_01.i_xDisc_Active, BOOL, 651548240 (8)
        GVL_Devices.ST1L0_XTES_GCC_01.i_xHV_ON, BOOL, 651548232 (8)
        GVL_Devices.ST1L0_XTES_GCC_01.q_xHV_DIS, BOOL, 651548224 (8)
        GVL_Devices.ST1L0_XTES_GPI_01, FB_MKS275, 651374272 (86336)
        GVL_Devices.ST1L0_XTES_GPI_01.i_iPRESS_R, INT, 651460352 (16)
        GVL_Devices.ST1L0_XTES_PIP_01, FB_PIP_Gamma, 651548608 (90240)
        GVL_Devices.ST1L0_XTES_PIP_01.i_iPRESS, INT, 651634928 (16)
        GVL_Devices.ST1L0_XTES_PIP_01.i_xSP_DI, BOOL, 651634944 (8)
        GVL_Devices.ST1L0_XTES_PIP_01.q_xHVEna_DO, BOOL, 651634912 (8)
        GVL_Devices.TV1L0_GCC_01, FB_MKS422, 646151872 (87680)
        GVL_Devices.TV1L0_GCC_01.i_iPRESS_R, INT, 646239232 (16)
        GVL_Devices.TV1L0_GCC_01.q_xHV_DIS, BOOL, 646239248 (8)
        GVL_Devices.TV1L0_GPI_01, FB_MKS317, 646065536 (86336)
        GVL_Devices.TV1L0_GPI_01.i_iPRESS_R, INT, 646151584 (16)
        GVL_Devices.TV1L0_VGC_01, FB_VGC, 645888576 (176960)
        GVL_Devices.TV1L0_VGC_01.i_xClsLS, BOOL, 646065416 (8)
        GVL_Devices.TV1L0_VGC_01.i_xOpnLS, BOOL, 646065408 (8)
        GVL_Devices.TV1L0_VGC_01.q_xOPN_DO, BOOL, 646065424 (8)
        GVL_Devices.TV1L1_VGC_01, FB_VGC, 651107072 (176960)
        GVL_Devices.TV1L1_VGC_01.i_xClsLS, BOOL, 651283912 (8)
        GVL_Devices.TV1L1_VGC_01.i_xOpnLS, BOOL, 651283904 (8)
        GVL_Devices.TV1L1_VGC_01.q_xOPN_DO, BOOL, 651283920 (8)
        GVL_Devices.TV2L0_GCC_01, FB_MKS422, 647134528 (87680)
        GVL_Devices.TV2L0_GCC_01.i_iPRESS_R, INT, 647221888 (16)
        GVL_Devices.TV2L0_GCC_01.q_xHV_DIS, BOOL, 647221904 (8)
        GVL_Devices.TV2L0_GCC_02, FB_MKS422, 647663424 (87680)
        GVL_Devices.TV2L0_GCC_02.i_iPRESS_R, INT, 647750784 (16)
        GVL_Devices.TV2L0_GCC_02.q_xHV_DIS, BOOL, 647750800 (8)
        GVL_Devices.TV2L0_GFS_01, FB_MKS422, 647489408 (87680)
        GVL_Devices.TV2L0_GFS_01.i_iPRESS_R, INT, 647576768 (16)
        GVL_Devices.TV2L0_GFS_01.q_xHV_DIS, BOOL, 647576784 (8)
        GVL_Devices.TV2L0_GPI_01, FB_MKS317, 647048192 (86336)
        GVL_Devices.TV2L0_GPI_01.i_iPRESS_R, INT, 647134240 (16)
        GVL_Devices.TV2L0_GPI_02, FB_MKS317, 647577088 (86336)
        GVL_Devices.TV2L0_GPI_02.i_iPRESS_R, INT, 647663136 (16)
        GVL_Devices.TV2L0_PIP_01, FB_PIP_Gamma, 646957952 (90240)
        GVL_Devices.TV2L0_PIP_01.i_iPRESS, INT, 647044272 (16)
        GVL_Devices.TV2L0_PIP_01.i_xSP_DI, BOOL, 647044288 (8)
        GVL_Devices.TV2L0_PIP_01.q_xHVEna_DO, BOOL, 647044256 (8)
        GVL_Devices.TV2L0_PIP_02, FB_PIP_Gamma, 647399168 (90240)
        GVL_Devices.TV2L0_PIP_02.i_iPRESS, INT, 647485488 (16)
        GVL_Devices.TV2L0_PIP_02.i_xSP_DI, BOOL, 647485504 (8)
        GVL_Devices.TV2L0_PIP_02.q_xHVEna_DO, BOOL, 647485472 (8)
        GVL_Devices.TV2L0_PIP_03, FB_PIP_Gamma, 647751104 (90240)
        GVL_Devices.TV2L0_PIP_03.i_iPRESS, INT, 647837424 (16)
        GVL_Devices.TV2L0_PIP_03.i_xSP_DI, BOOL, 647837440 (8)
        GVL_Devices.TV2L0_PIP_03.q_xHVEna_DO, BOOL, 647837408 (8)
        GVL_Devices.TV2L0_VGC_01, FB_VGC, 647222208 (176960)
        GVL_Devices.TV2L0_VGC_01.i_xClsLS, BOOL, 647399048 (8)
        GVL_Devices.TV2L0_VGC_01.i_xOpnLS, BOOL, 647399040 (8)
        GVL_Devices.TV2L0_VGC_01.q_xOPN_DO, BOOL, 647399056 (8)
        GVL_Devices.TV2L0_VGC_02, FB_VGC, 647841344 (176960)
        GVL_Devices.TV2L0_VGC_02.i_xClsLS, BOOL, 648018184 (8)
        GVL_Devices.TV2L0_VGC_02.i_xOpnLS, BOOL, 648018176 (8)
        GVL_Devices.TV2L0_VGC_02.q_xOPN_DO, BOOL, 648018192 (8)
        GVL_Devices.TV3L0_PIP_01, FB_PIP_Gamma, 651284032 (90240)
        GVL_Devices.TV3L0_PIP_01.i_iPRESS, INT, 651370352 (16)
        GVL_Devices.TV3L0_PIP_01.i_xSP_DI, BOOL, 651370368 (8)
        GVL_Devices.TV3L0_PIP_01.q_xHVEna_DO, BOOL, 651370336 (8)
        GVL_Devices.TV3L0_VFS_01_Interface, FB_VFS_Interface, 651018112 (88960)
        GVL_Devices.TV3L0_VFS_01_Interface.i_eVFS_State, E_VGC, 651107008 (16)
        GVL_Devices.TV3L0_VFS_01_Interface.i_xMPS_OK, BOOL, 651107000 (8)
        GVL_Devices.TV3L0_VFS_01_Interface.i_xTrigger, BOOL, 651106976 (8)
        GVL_Devices.TV3L0_VFS_01_Interface.i_xVAC_FAULT_OK, BOOL, 651106160 (8)
        GVL_Devices.TV3L0_VFS_01_Interface.i_xVFS_Closed, BOOL, 651106992 (8)
        GVL_Devices.TV3L0_VFS_01_Interface.i_xVFS_Open, BOOL, 651106984 (8)
        GVL_Devices.TV3L0_VFS_01_Interface.iq_stValve.xCLS_SW, BOOL, 651104840 (8)
        GVL_Devices.TV3L0_VFS_01_Interface.q_xCLS_SW, BOOL, 651106928 (8)
        GVL_Devices.TV3L0_VFS_01_Interface.q_xOPN_SW, BOOL, 651106920 (8)
        GVL_Devices.TV3L0_VFS_01_Interface.q_xOverrideMode, BOOL, 651106944 (8)
        GVL_Devices.TV3L0_VFS_01_Interface.q_xOverrideOpen, BOOL, 651106952 (8)
        GVL_Devices.TV3L0_VFS_01_Interface.q_xPRESS_OK, BOOL, 651106912 (8)
        GVL_Devices.TV3L0_VFS_01_Interface.q_xVAC_FAULT_Reset, BOOL, 651106936 (8)
        GVL_Devices.TV3L0_VFS_01_Interface.q_xVetoValveClosed, BOOL, 651106968 (8)
        GVL_Devices.TV3L0_VFS_01_Interface.q_xVetoValveOpenDO, BOOL, 651106960 (8)
        GVL_Devices.TV4L0_GCC_01, FB_MKS500, 651902144 (88000)
        GVL_Devices.TV4L0_GCC_01.i_iPRESS_R, INT, 651989744 (16)
        GVL_Devices.TV4L0_GCC_01.i_xDisc_Active, BOOL, 651989776 (8)
        GVL_Devices.TV4L0_GCC_01.i_xHV_ON, BOOL, 651989768 (8)
        GVL_Devices.TV4L0_GCC_01.q_xHV_DIS, BOOL, 651989760 (8)
        GVL_Devices.TV4L0_GCC_02, FB_MKS500, 652343680 (88000)
        GVL_Devices.TV4L0_GCC_02.i_iPRESS_R, INT, 652431280 (16)
        GVL_Devices.TV4L0_GCC_02.i_xDisc_Active, BOOL, 652431312 (8)
        GVL_Devices.TV4L0_GCC_02.i_xHV_ON, BOOL, 652431304 (8)
        GVL_Devices.TV4L0_GCC_02.q_xHV_DIS, BOOL, 652431296 (8)
        GVL_Devices.TV4L0_GPI_01, FB_MKS275, 651815808 (86336)
        GVL_Devices.TV4L0_GPI_01.i_iPRESS_R, INT, 651901888 (16)
        GVL_Devices.TV4L0_GPI_02, FB_MKS275, 652257344 (86336)
        GVL_Devices.TV4L0_GPI_02.i_iPRESS_R, INT, 652343424 (16)
        GVL_Devices.TV4L0_PIP_01, FB_PIP_Gamma, 651990144 (90240)
        GVL_Devices.TV4L0_PIP_01.i_iPRESS, INT, 652076464 (16)
        GVL_Devices.TV4L0_PIP_01.i_xSP_DI, BOOL, 652076480 (8)
        GVL_Devices.TV4L0_PIP_01.q_xHVEna_DO, BOOL, 652076448 (8)
        GVL_Devices.TV4L0_PIP_02, FB_PIP_Gamma, 652431680 (90240)
        GVL_Devices.TV4L0_PIP_02.i_iPRESS, INT, 652518000 (16)
        GVL_Devices.TV4L0_PIP_02.i_xSP_DI, BOOL, 652518016 (8)
        GVL_Devices.TV4L0_PIP_02.q_xHVEna_DO, BOOL, 652517984 (8)
        GVL_Devices.TV4L0_VGC_01, FB_VGC, 652080384 (176960)
        GVL_Devices.TV4L0_VGC_01.i_xClsLS, BOOL, 652257224 (8)
        GVL_Devices.TV4L0_VGC_01.i_xOpnLS, BOOL, 652257216 (8)
        GVL_Devices.TV4L0_VGC_01.q_xOPN_DO, BOOL, 652257232 (8)
        GVL_Devices.TV5L0_GCC_01, FB_MKS500, 652698496 (88000)
        GVL_Devices.TV5L0_GCC_01.i_iPRESS_R, INT, 652786096 (16)
        GVL_Devices.TV5L0_GCC_01.i_xDisc_Active, BOOL, 652786128 (8)
        GVL_Devices.TV5L0_GCC_01.i_xHV_ON, BOOL, 652786120 (8)
        GVL_Devices.TV5L0_GCC_01.q_xHV_DIS, BOOL, 652786112 (8)
        GVL_Devices.TV5L0_GCC_02, FB_MKS500, 653140032 (88000)
        GVL_Devices.TV5L0_GCC_02.i_iPRESS_R, INT, 653227632 (16)
        GVL_Devices.TV5L0_GCC_02.i_xDisc_Active, BOOL, 653227664 (8)
        GVL_Devices.TV5L0_GCC_02.i_xHV_ON, BOOL, 653227656 (8)
        GVL_Devices.TV5L0_GCC_02.q_xHV_DIS, BOOL, 653227648 (8)
        GVL_Devices.TV5L0_GCC_03, FB_MKS500, 653405952 (88000)
        GVL_Devices.TV5L0_GCC_03.i_iPRESS_R, INT, 653493552 (16)
        GVL_Devices.TV5L0_GCC_03.i_xDisc_Active, BOOL, 653493584 (8)
        GVL_Devices.TV5L0_GCC_03.i_xHV_ON, BOOL, 653493576 (8)
        GVL_Devices.TV5L0_GCC_03.q_xHV_DIS, BOOL, 653493568 (8)
        GVL_Devices.TV5L0_GFS_01, FB_MKS422, 653318272 (87680)
        GVL_Devices.TV5L0_GFS_01.i_iPRESS_R, INT, 653405632 (16)
        GVL_Devices.TV5L0_GFS_01.q_xHV_DIS, BOOL, 653405648 (8)
        GVL_Devices.TV5L0_GPI_01, FB_MKS275, 652612160 (86336)
        GVL_Devices.TV5L0_GPI_01.i_iPRESS_R, INT, 652698240 (16)
        GVL_Devices.TV5L0_GPI_02, FB_MKS275, 653053696 (86336)
        GVL_Devices.TV5L0_GPI_02.i_iPRESS_R, INT, 653139776 (16)
        GVL_Devices.TV5L0_PIP_01, FB_PIP_Gamma, 652786496 (90240)
        GVL_Devices.TV5L0_PIP_01.i_iPRESS, INT, 652872816 (16)
        GVL_Devices.TV5L0_PIP_01.i_xSP_DI, BOOL, 652872832 (8)
        GVL_Devices.TV5L0_PIP_01.q_xHVEna_DO, BOOL, 652872800 (8)
        GVL_Devices.TV5L0_PIP_02, FB_PIP_Gamma, 653228032 (90240)
        GVL_Devices.TV5L0_PIP_02.i_iPRESS, INT, 653314352 (16)
        GVL_Devices.TV5L0_PIP_02.i_xSP_DI, BOOL, 653314368 (8)
        GVL_Devices.TV5L0_PIP_02.q_xHVEna_DO, BOOL, 653314336 (8)
        GVL_Devices.TV5L0_PIP_03, FB_PIP_Gamma, 653493952 (90240)
        GVL_Devices.TV5L0_PIP_03.i_iPRESS, INT, 653580272 (16)
        GVL_Devices.TV5L0_PIP_03.i_xSP_DI, BOOL, 653580288 (8)
        GVL_Devices.TV5L0_PIP_03.q_xHVEna_DO, BOOL, 653580256 (8)
        GVL_Devices.TV5L0_VGC_01, FB_VGC, 652876736 (176960)
        GVL_Devices.TV5L0_VGC_01.i_xClsLS, BOOL, 653053576 (8)
        GVL_Devices.TV5L0_VGC_01.i_xOpnLS, BOOL, 653053568 (8)
        GVL_Devices.TV5L0_VGC_01.q_xOPN_DO, BOOL, 653053584 (8)
        GVL_Devices.TV6L0_VGC_01, FB_VGC, 653584192 (176960)
        GVL_Devices.TV6L0_VGC_01.i_xClsLS, BOOL, 653761032 (8)
        GVL_Devices.TV6L0_VGC_01.i_xOpnLS, BOOL, 653761024 (8)
        GVL_Devices.TV6L0_VGC_01.q_xOPN_DO, BOOL, 653761040 (8)

.. raw:: html

   </details>
   <br />


GVL_FS_Devices
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>22 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_FS_Devices.TV3L0_VFS_01, FB_VFS, 653761152 (111232)
        GVL_FS_Devices.TV3L0_VFS_01.i_xCLS_SW, BOOL, 653872248 (8)
        GVL_FS_Devices.TV3L0_VFS_01.i_xClsLS, BOOL, 653872168 (8)
        GVL_FS_Devices.TV3L0_VFS_01.i_xOPN_SW, BOOL, 653872240 (8)
        GVL_FS_Devices.TV3L0_VFS_01.i_xOpnLS, BOOL, 653872160 (8)
        GVL_FS_Devices.TV3L0_VFS_01.i_xOverrideMode, BOOL, 653872264 (8)
        GVL_FS_Devices.TV3L0_VFS_01.i_xOverrideOpen, BOOL, 653872272 (8)
        GVL_FS_Devices.TV3L0_VFS_01.i_xPress_OK, BOOL, 653872232 (8)
        GVL_FS_Devices.TV3L0_VFS_01.i_xTrigger, BOOL, 653872208 (8)
        GVL_FS_Devices.TV3L0_VFS_01.i_xVAC_FAULT_Reset, BOOL, 653872256 (8)
        GVL_FS_Devices.TV3L0_VFS_01.i_xVetoValveClosed, BOOL, 653872224 (8)
        GVL_FS_Devices.TV3L0_VFS_01.i_xVetoValveOpenDO, BOOL, 653872216 (8)
        GVL_FS_Devices.TV3L0_VFS_01.q_eVFS_State, E_VGC, 653872320 (16)
        GVL_FS_Devices.TV3L0_VFS_01.q_xClose_A, BOOL, 653872176 (8)
        GVL_FS_Devices.TV3L0_VFS_01.q_xClose_B, BOOL, 653872184 (8)
        GVL_FS_Devices.TV3L0_VFS_01.q_xClose_C, BOOL, 653872192 (8)
        GVL_FS_Devices.TV3L0_VFS_01.q_xMPS_OK, BOOL, 653872312 (8)
        GVL_FS_Devices.TV3L0_VFS_01.q_xOPN_DO, BOOL, 653872200 (8)
        GVL_FS_Devices.TV3L0_VFS_01.q_xTrigger, BOOL, 653872280 (8)
        GVL_FS_Devices.TV3L0_VFS_01.q_xVAC_FAULT_OK, BOOL, 653872304 (8)
        GVL_FS_Devices.TV3L0_VFS_01.q_xVFS_Closed, BOOL, 653872296 (8)
        GVL_FS_Devices.TV3L0_VFS_01.q_xVFS_Open, BOOL, 653872288 (8)

.. raw:: html

   </details>
   <br />


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4389728 (128)


GVL_LFE_VAC_FSV_PMPS
^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_LFE_VAC_FSV_PMPS.g_FastFaultOutput3, FB_HardwareFFOutput, 653872384 (494912)
        GVL_LFE_VAC_FSV_PMPS.g_FastFaultOutput3.q_xFastFaultOut, BOOL, 653872648 (8)
        GVL_LFE_VAC_FSV_PMPS.xFEE_FSV_MPS_OK, BOOL, 644690288 (8)
        GVL_LFE_VAC_FSV_PMPS.xReset_PMPS_FFO3, BOOL, 644690280 (8)


GVL_LFE_VAC_PMPS
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_LFE_VAC_PMPS.g_FastFaultOutput1, FB_HardwareFFOutput, 654367296 (494912)
        GVL_LFE_VAC_PMPS.g_FastFaultOutput1.q_xFastFaultOut, BOOL, 654367560 (8)
        GVL_LFE_VAC_PMPS.g_FastFaultOutput2, FB_HardwareFFOutput, 654862208 (494912)
        GVL_LFE_VAC_PMPS.g_FastFaultOutput2.q_xFastFaultOut, BOOL, 654862472 (8)
        GVL_LFE_VAC_PMPS.g_fbArbiter1, FB_Arbiter, 655495488 (473472)
        GVL_LFE_VAC_PMPS.xEBD_FEE_MPS_OK, BOOL, 645887856 (8)
        GVL_LFE_VAC_PMPS.xH1_1_H1_2_MPS_OK, BOOL, 645887864 (8)
        GVL_LFE_VAC_PMPS.xReset_PMPS_FFO1, BOOL, 644690296 (8)
        GVL_LFE_VAC_PMPS.xReset_PMPS_FFO2, BOOL, 645379944 (8)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81600)
        GVL_Logger.iLogPort, UINT, 4096096 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4178816 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096416 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096112 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4178848 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096448 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096480 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096512 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097184 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>12 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 8552032 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4390200 (8)
        GVL_Param_TcUnit.MaxNumberOfAsserts, UINT, 4390176 (16)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 8549920 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4390160 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 8549904 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4390144 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 8549888 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 8552064 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 8549952 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 8549936 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 8549984 (2048)

.. raw:: html

   </details>
   <br />


GVL_PfeifferParameters
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PfeifferParameters.gcMaxPfeifferPumps, INT, 638760576 (16)


GVL_PLC_Interfaces
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PLC_Interfaces.Accelerator_Upstream_Gauge, ST_VG, 655968960 (1056)
        GVL_PLC_Interfaces.fb_ADS_WATCHDOG_VAC_LFE_GEM, FB_ADS_WATCHDOG, 655970016 (7008)
        GVL_PLC_Interfaces.i_xUpstreamTreaty_PressOK, BOOL, 645888544 (8)
        GVL_PLC_Interfaces.XPP_Downstream_Gauge, ST_VG, 655977024 (1056)
        GVL_PLC_Interfaces.XPP_DS_Gauge, ST_VG, 656067456 (1056)
        GVL_PLC_Interfaces.XPP_Modbus_Gauge, FB_GaugeModbus, 655978112 (89344)
        GVL_PLC_Interfaces.XPP_PressureLinkHelper, FB_LREALFromEPICS, 656068544 (960)


GVL_TcUnit
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>18 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsLogger, FB_ADSLogStringMessageFifoQueue, 4408832 (4128864)
        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 630429408 (8320864)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT, 630413408 (16000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 8552048 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 4390752 (2048)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 630379328 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 4390720 (32)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 630379296 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4390192 (8)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 8552056 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 4392800 (16)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 630381376 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4390208 (512)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 8552096 (621827200)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 4392832 (16000)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 630381408 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4383976 (8)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 8549944 (8)

.. raw:: html

   </details>
   <br />


GVL_Variables
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Variables.r_Accelerator_Setpoint, REAL, 655978080 (32)
        GVL_Variables.xSystemOverrideMode_EBD, BOOL, 645888552 (8)
        GVL_Variables.xSystemOverrideMode_FEE, BOOL, 645888560 (8)
        GVL_Variables.xSystemOverrideMode_H1_1_H1_2, BOOL, 645888568 (8)


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


LCLS_Vacuum
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_Vacuum.Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 638758312 (48)


MAIN
^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MAIN.ctuTest, CTU, 644603008 (128)
        MAIN.fbLogger, FB_LogMessage, 644603392 (81600)
        MAIN.fbLogHandler, FB_LogHandler, 638814208 (5788800)
        MAIN.ft_bValid, F_TRIG, 644685056 (64)
        MAIN.rt_bValid, R_TRIG, 644684992 (64)
        MAIN.tof_bValid_PV, TOF, 644603136 (224)
        MAIN.tTimeout, TIME, 638814176 (32)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4389408 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>25 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 8542784 (16)
        PMPS_GVL.BP_jsonDoc, SJsonValue, 3072064 (32)
        PMPS_GVL.cnMaxStateArrayLen, INT, 8546400 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 8544640 (1760)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 8542880 (1760)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 8546432 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 8542560 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 8542656 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 8541504 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 8548544 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 8547520 (1024)
        PMPS_GVL.g_cBoundaries, INT, 8547456 (16)
        PMPS_GVL.M_Mode, INT, 4392816 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 8546416 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 8542720 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 8542800 (16)
        PMPS_GVL.PERange, PE_Ranges, 8542528 (32)
        PMPS_GVL.reVHyst, REAL, 8547488 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 8542816 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 8539744 (1760)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 8537984 (1760)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 8542752 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 8542592 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 8549568 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 8547472 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 8549600 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 8549632 (256)


PRG_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_PMPS.fbArbiterIO, FB_SubSysToArbiter_IO, 662278336 (138368)
        PRG_PMPS.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 662279136 (1760)
        PRG_PMPS.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 662280896 (1760)
        PRG_PMPS.fbArbiterIO.xTxPDO_state, BIT, 662282657 (1)
        PRG_PMPS.fbArbiterIO.xTxPDO_toggle, BIT, 662282656 (1)


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 656089696 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 656089184 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 656089312 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 656089440 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 656089056 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 656089568 (128)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 656120032 (960)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, PlcLicenseInfo, 656069728 (1024)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__FSV_Task, _Implicit_Task_Info, 656074976 (704)
        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 656075680 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 656070752 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 656072832 (2048)
        TwinCAT_SystemInfoVarList._TaskOid_FSV_Task, OTCID, 656074880 (32)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 656074944 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_FSV_Task, OTCID, 656072800 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 656074912 (32)


